# genmap

./: .gitignore  LICENSE  README.md
backend/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
backend/api/: main.py
backend/api/clients/: __init__.py  clip.py  diffusion.py  local_storage.py  qdrant.py  sqlite.py
backend/api/config/: settings.py
backend/api/router/: __init__.py  image.py
backend/api/schema/: __init__.py  schema.py
backend/api/service/: __init__.py  image.py  initialize.py
backend/tests/clients/: test_clip.py  test_diffusion.py  test_local_storage.py  test_qdrant.py  test_sqlite.py
backend/tests/config/: __init__.py  settings.py
frontend/: .gitignore  README.md  next.config.ts  orval.config.ts  package.json
frontend/src/app/: page.tsx
frontend/src/components/: ControlImageSelector.tsx  ImageGallery.tsx  ImageGenerator.tsx  ImageSearch.tsx  ImageThumbnail.tsx  SearchResults.tsx
frontend/src/components/ui/: FileUpload.tsx
frontend/src/types/: index.ts
