[project]
name = "backend"
version = "0.1.0"
description = "Backend service for the application"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "diffusers>=0.33.1",
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "qdrant-client>=1.14.2",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "python-multipart>=0.0.20",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[dependency-groups]
dev = [
    "mypy==1.15.0",
    "ruff==0.11.5",
    "nbqa==1.9.1",
    "pre-commit==4.2.0",
    "nbdime==4.0.2",
    "pytest>=8.3.5",
]
